# minutes-generator-local

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: main.py
app/api/: api.py  heartbeat.py
app/core/: config.py
app/models/: summary.py
app/services/: model.py
app/util/: logger.py  split_audio.py
docs/: workflow.md  zenn.md
